Major changes:
2011/04/04: Add support of port in http package and in tcpchat test scenario
2011/03/31: Add specific option 'E for entities expansion in xml_checker, V15.0
            Add normalize text also when knowing from DTD that there cannot be text in Xml_Parser, V26.6
2011/03/27: Fix homogenenize output of status in account
2011/03/24: Fix normalization of text and add adjustment of Node_Info in Xml_Parser, V26.5
2011/03/18: Fix preserve text when it is the only child in Xml_Parser, V26.2
2011/03/18: Add option --no-normalize to xml_checker, V14.0
2011/03/17: Chg default 'keep' mode of xml_checker, V13.0
2011/03/15: Fix autobus local echo and clean-up
            Chg replace Fifo by an Autobus in mcd
2011/03/11: Fix blocking management in socket and Tcp_Util.Abort_Send_And_Close
2011/03/10: Add operations to set/get TTL on socket
2011/03/09: Fix detection of '^' and '$' in search pattern when specific delimiter in asubst, V11.4
2011/03/08: Fix handling of specific Delim in asubst, V11.3
2011/03/01: Add different blocking modes for sending and receiving on sockets
2011/02/28: Add timeout in Tcp_Util.Send
2011/02/22: Add autobus package
2011/02/16: Add improve help of als, V6.2
2011/02/15: Add option --date_iso for strict ISO output of dates in als, V6.1
            Chg use ISO 8601 format for time input and output of als, V6.0
            Add a static agite executable
2011/02/14: Fix dispatching of X Refresh event to multiple windows
            Add Get_Clock in Chronos, and remove Detach cause same as Attach (null)
2011/02/13: Add use anonymous access type in Limited_List
2011/02/12: Add make Timer_Id a smart reference
2011/02/11: Add new operations on Timers and add New_Id parameter to expiration callback
2011/02/10: Add improve error reported when parsing encoding map in Xml_Parser V26.1
2011/02/08: Add operation Set_Pi to Xml_Parser.Generator V9.0
2011/02/07: Add make Timer_Id tagged
            Chg remove Text_Handler